# ultra-dex-contract

./: .gitignore  CMakeLists.txt  LICENCE  Makefile  README.md
include/: Contract.hpp  Util.hpp  eosio.token.hpp
include/definitions/: Definitions.hpp  DefinitionsRaw.hpp  DefinitionsRaw.hpp.in
src/: Accounts.cpp  Balances.cpp  Contract.cpp  Deposits.cpp  ExtBalances.cpp
